[package]
name = "countdown"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.11", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.11", features = ["csr"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
